Bug 1759206 - Part 1: Add module variant of JS::FinishIncrementalEncoding. r=nbp

Depends on D141742

Differential Revision: https://phabricator.services.mozilla.com/D141743